[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/GodotAdventureQuest/GAQMainDock/GAQMainDock.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotAdventureQuest/GAQMainDock/icons/group_arrow-open.png" type="Texture" id=2]
[ext_resource path="res://addons/GodotAdventureQuest/GAQMainDock/GAQGroupButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.941176, 0.737255, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="GAQMainDock" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/MainContainer"]
margin_right = 312.0
margin_bottom = 22.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "- P o p o c h i u -"
align = 1
uppercase = true

[node name="RoomsButton" type="Button" parent="MarginContainer/MainContainer"]
margin_top = 26.0
margin_right = 312.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_hover = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0.121569, 0.121569, 0.121569, 1 )
toggle_mode = true
pressed = true
text = "Rooms"
icon = ExtResource( 2 )
flat = true
align = 0
script = ExtResource( 3 )
target_group = NodePath("../Rooms")

[node name="Rooms" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 46.0
margin_right = 312.0
margin_bottom = 66.0

[node name="BtnCreateRoom" type="Button" parent="MarginContainer/MainContainer/Rooms"]
margin_left = 197.0
margin_right = 312.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Crear habitación"

[node name="PopupCreateRoom" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
rect_min_size = Vector2( 640, 360 )
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Crear habitación"
dialog_hide_on_ok = false
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupCreateRoom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="HBoxContainer" parent="PopupCreateRoom/VBoxContainer"]
margin_right = 624.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="PopupCreateRoom/VBoxContainer/InputContainer"]
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
text = "Elige un nombre"

[node name="Input" type="LineEdit" parent="PopupCreateRoom/VBoxContainer/InputContainer"]
margin_left = 108.0
margin_right = 624.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false

[node name="Required" type="Label" parent="PopupCreateRoom/VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 304.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.8, 0.258824, 0.258824, 1 )
text = "Escribir el nombre es obligatorio..."

[node name="HSeparator" type="HSeparator" parent="PopupCreateRoom/VBoxContainer"]
margin_top = 28.0
margin_right = 624.0
margin_bottom = 32.0

[node name="Guide" type="Label" parent="PopupCreateRoom/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.698039 )
margin_top = 36.0
margin_right = 624.0
margin_bottom = 67.0
text = "Debe ser en inglés por lo de los caracteres.
(p. ej. Garden o Bathroom)"

[node name="InfoContainer" type="VBoxContainer" parent="PopupCreateRoom/VBoxContainer"]
margin_top = 71.0
margin_right = 624.0
margin_bottom = 85.0

[node name="Label" type="Label" parent="PopupCreateRoom/VBoxContainer/InfoContainer"]
margin_right = 137.0
margin_bottom = 14.0
text = "Se creará la habitación en:"

[node name="ScenePath" type="Label" parent="PopupCreateRoom/VBoxContainer/InfoContainer"]
margin_left = 141.0
margin_right = 624.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="ScriptPath" type="Label" parent="PopupCreateRoom/VBoxContainer/InfoContainer"]
margin_left = 141.0
margin_right = 624.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
